# mettle

./: CMakeLists.txt  README.md  vcpkg.json
cmake/: mettle-config.cmake.in  mettle.pc.in
examples/: CMakeLists.txt
src/: CMakeLists.txt
src/libmettle/windows/: subprocess_test_runner.cpp
test/: CMakeLists.txt
test_data/: CMakeLists.txt
